--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.13.0"
+  }
   "dependencies": {
     "bootstrap": "^4.4.1",
     "material-components-web": "^5.0.0",
