--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "12.13.0"
+    "node": "v12.13.1"
   }
   "dependencies": {
     "bootstrap": "^4.4.1",
